# ctcdecode

./: .clang-format  .gitignore  .gitmodules  .ruleset  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.py  build.sh  debug.sh  format.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
CTCBeamDecoder/: CTCBeamDecoder.sln
CTCBeamDecoder/CTCBeamDecoder/: CTCBeamDecoder.csproj  CTCDecoder.cs  LICENSE
CTCBeamDecoder/CTCBeamDecoder/CTCBeamDecoderInterop/: CTCDecoderInterop.cs  INativeCTCBeamDecoder.cs  LinuxNativeNativeCtcBeamBeamDecoderInterop.cs  WindowsNativeNativeCtcBeamBeamDecoderInterop.cs
CTCBeamDecoder/CTCBeamDecoder/Models/: DecoderResult.cs  DecoderResultArray.cs  DecoderScorer.cs  DecoderState.cs  IDecoderResult.cs
CTCBeamDecoder/UnitTest/: TestDecoder.cs  UnitTest.csproj
ctc_decode/: __init__.py
ctc_decode/src/: cpu_binding.cpp  cpu_binding.h  ctc_beam_search.h  ctc_loss_util.h
ctc_decode/src/util/: status.h
ctcdecode/: CMakeLists.txt  __init__.py  decoder.py  makefile  makefile-windows
ctcdecode/src/: binding.cpp  binding.h  cpu_binding.cpp  cpu_binding.h  ctc_beam_scorer.h  ctc_beam_scorer_dict.h  ctc_beam_scorer_klm.h  ctc_beam_search.h  ctc_beam_search_decoder.cpp  ctc_beam_search_decoder.h  decoder_options.h  decoder_utils.cpp  decoder_utils.h  decoderstate.h  hotword_scorer.cpp  hotword_scorer.h  output.h  path_trie.cpp  path_trie.h  resourceutils.cpp  resourceutils.h  scorer.cpp  scorer.h
ctcdecode/src/util/: status.h
ctcdecode/src/windows/: entry_point.cpp
pytorch_ctc/: __init__.py
pytorch_ctc/src/: cpu_binding.cpp  cpu_binding.h  ctc_beam_entry.h  ctc_beam_scorer_dict.h  ctc_beam_scorer_klm.h  ctc_beam_search.h  ctc_decoder.h  ctc_labels.h  ctc_loss_util.h  ctc_test.cpp  ctc_test_data.h  ctc_trie_node.h  train.py
pytorch_ctc/src/util/: macros.h
src/: CMakeLists.txt  binding.cpp  binding.h  cpu_binding.cpp  cpu_binding.h  ctc_beam_entry.h  ctc_beam_search.h  ctc_beam_search_decoder.cpp  ctc_beam_search_decoder.h  decoder_utils.cpp  decoder_utils.h  output.h  path_trie.cpp  path_trie.h
src/util/: status.cpp  status.h  top_n.h
tests/: librispeech-test-clean-121-121726-0000-with-wav2vec_small_960h.pt  test.py  test_decode.py  test_decode2.py
tests/cpp/: CMakeLists.txt  test_build_fst.cpp
tests/cpp/fixtures/: expected_fst.fst  lexicon.txt  vocab.txt
tests/data/: bigram.arpa  ocr.trie  rnnOutput.csv  rnnOutputLogSoftmax.csv
tests/python/: test.arpa  test_decode.py
tools/: README.md  build_fst.cpp  build_fst.h  build_fst_main.cpp
